manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-profile
  labels:
    app: personal-profile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personal-profile
  template:
    metadata:
      labels:
        app: personal-profile
    spec:
      containers:
        - name: personal-profile
          image: ghcr.io/jhancock1229/personal-profile:latest
          ports:
            - containerPort: 80
